# clickx3-toolkit

./: .flake8  .gitignore  Pipfile  README.md  config.ini  config.ini.temp  poetry.toml  pyproject.code-workspace  pyproject.toml  pytest.ini  requirements.txt  yapf_style.cfg
apps/: __init__.py
apps/chrome/: __init__.py
apps/chrome/android/: __init__.py
apps/chrome/ios/: __init__.py
apps/via/: __init__.py  home.py
appuiautomator/: __init__.py  action.py  android.py  decorator.py  decorators.py  devices_manager.py  element.py  exceptions.py  ios.py  keycode.py  page_object.py  u2_po.py
appuiautomator/h5/: __init__.py  chromedriver.py  driver_util.py  geckodriver.py
appuiautomator/se/: __init__.py  app.py  chromedriver.py  driver.py  driver_util.py  element.py  geckodriver.py  javascript.py  page.py  webapp.py  webdriver.py  website.py
appuiautomator/se/support/: __init__.py  chromedriver.py  driver_util.py  geckodriver.py
appuiautomator/u2/: __init__.py  app.py  app_object.py  device.py  element.py  keycode.py  page.py  page_object.py
appuiautomator/u2/support/: __init__.py  expected_conditions.py  wait.py
appuiautomator/utils/: config.py  data_sign.py  design_patterns.py  dict_util.py  http_client.py  idcard.py  json_util.py  log_util.py  logger.py  md5_util.py  number_util.py  ocr_util.py  phone_number_prefix.py  popen_util.py  randoms.py  regular_util.py  rsa_util.py  signature.py  sql_util.py  ssh_util.py  time_util.py  yaml_util.py
appuiautomator/wda/: __init__.py  app.py  device.py  element.py  page.py
clickx3/: __init__.py  decorators.py
clickx3/common/: __init__.py  action.py  decorators.py  devices_manager.py  exceptions.py
clickx3/pytest/: __init__.py  hooks.py  options.py  utils.py
clickx3/pytest/fixtures/: __init__.py  android_fixture.py  driver_fixture.py  ios_fixture.py  variable_fixture.py
clickx3/pytest/plugins/: __init__.py  android_screenrecord_plugin.py  android_screenshot_plugin.py  ios_screenshot_plugin.py  pytest_html_plugin.py  web_screenrecord_plugin.py  web_screenshot_plugin.py
clickx3/se/: __init__.py  app.py  driver.py  element.py  page.py
clickx3/se/support/: chromedriver.py  driver_util.py  expected_conditions.py  geckodriver.py  msedgedriver.py  watcher.py
clickx3/u2/: app.py  device.py  element.py  page.py
clickx3/u2/support/: expected_conditions.py  keycode.py  wait.py
clickx3/utils/: __init__.py  config.py  convert_util.py  date_util.py  excel_util.py  google_auth_util.py  http_client.py  ini_reader.py  json_util.py  log_util.py  module_util.py  ocr_util.py  path_util.py  popen_util.py  project.py  randoms.py  signature.py  time_util.py  yaml_util.py
clickx3/utils/constants/: __init__.py  phone_number_prefix.py
clickx3/utils/encryption/: __init__.py  rsa_util.py  signature.py
clickx3/wda/: app.py  device.py  element.py  page.py
docs/: PaddleOCR训练模型.md  PaddleOCR训练说明.md  ocr_train_tools.py  xpath.md  注意事项.md  脚本规范.md  防踩坑.md  项目规范.md
example/: baidu_pages.py  baidu_search_test.py  baidu_test.py
example/apps/: __init__.py  baidu_search.py
example/baidu_app/: __init__.py  pages.py
example/baidu_search_app/: __init__.py  home_page.py  pages.py  search_result_page.py
example/pages/: __init__.py  baidu_search.py
example/pages/app_name/: __init__.py  first.py  second.py
example/pages/baidu_search/: __init__.py  home.py  search_result.py
example/testcases/: app_name_test.py  baidu_search_test.py
examples/: baidu_pages.py
interface/: __init__.py
pages/: __init__.py
pages/chrome/: __init__.py
pages/chrome/android/: __init__.py
pages/chrome/ios/: __init__.py
pages/via/: __init__.py  home.py
resources/paddleocr/: README.md
resources/webdrive/: README.md
testcase/: base_test.py
testcases/: base_test.py  chrome_test.py  conftest.py  pytest.ini  via_test.py
tests/: __init__.py  adb_test.py  conftest.py  debug_selenium.py  debug_selenium_test.py  debug_u2.py  debug_u2_test.py  debug_wda.py  debug_wda_test.py  pytest_demo.py  selenium_test.py  u2_test.py  wda_test.py
