[tool.poetry]
name = "appui-automator"
version = "0.1.0"
description = ""
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = 'README.md'

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
#secondary = true

[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple/"
#default = true
secondary = true

[tool.poetry.dependencies]
python = "^3.6"
uiautomator2 = { version = "^2.15.0", extras=["image"] }
tidevice = { version = "^0.3.5", extras=["openssl"] }
weditor = "^0.6.3"
jsonpath = "^0.82"
orjson = "^3.5.1"
pytest = "^5.4.3"
pytest-html = "^3.1.1"
pytest-dependency = "^0.5.1"
pytest-ordering = "^0.6"
pytest-sugar = "^0.9.4"
pytest-rerunfailures = "^9.1.1"
allure-pytest = "^2.8.40"
pycryptodome = "^3.10.1"
pyyaml = "^5.4.1"
PyWavelets = "^1.1.1"
sqlalchemy = "^1.4.2"
cx-oracle = "^8.1.0"
sshtunnel = "^0.4.0"
selenium = "^3.141.0"
xlwings = "^0.23.0"
paddlepaddle = "2.0.1"
paddleocr = "^2.0.3"
flake8 = "^3.9.0"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = [
    "setuptools!=50.0",
    "poetry>=0.12"
]
build-backend = "poetry.masonry.api"
