[tool.poetry]
name = "clickx3-toolkit"
version = "0.1.0"
description = "测试点点点"
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = 'README.md'

packages = [
    { include = "clickx3" },
    { include = "clickx3/**/*.py" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.6"
pywin32 = { version = "*", markers = "platform_system == 'Windows'" }
selenium = "^3.141.0"
uiautomator2 = { version = "^2.15.0", extras=["image"] }
facebook-wda = "^1.4.0"
tidevice = { version = "^0.4.0", extras=["openssl"] }
jsonpath = "^0.82"
orjson = "^3.5.1"
pycryptodome = "^3.10.1"
pywavelets = "^1.1.1"
pyyaml = "^5.4.1"
sqlalchemy = "^1.4.2"
cx-oracle = "^8.1.0"
sshtunnel = "^0.4.0"
xlwings = "^0.23.0"
paddlepaddle = "2.0.2"
paddleocr = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-html = "^3.1.1"
pytest-dependency = "^0.5.1"
pytest-ordering = "^0.6"
pytest-sugar = "^0.9.4"
pytest-rerunfailures = "^9.1.1"
allure-pytest = "^2.8.40"
allure-python-commons = "^2.8.40"
flake8 = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = [
    "setuptools!=50.0",
    "poetry>=1.1.5"
]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "google"
line_length = 120
multi_line_output = 3
group_by_package = true

# [tool.pytest]
# minversion = "6.0"
# addopts = [
#     "-s",
#     "-v",
#     "--disable-warnings",
#     "--pyargs",
#     "--html=report.html"
# ]
# testpaths = [
#     "testcases"
# ]
# log_cli = true
# filterwarnings = [
#     "ignore::DeprecationWarning"
# ]
# required_plugins = [
#     "pytest-html",
#     "pytest-rerunfailures"
# ]
# python_classes =[
#     "Test*",
#     "*TestSuite"
# ]
