[tool.poetry]
name = "clickx3-toolkit"
version = "0.1.0"
description = "测试点点点"
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = 'README.md'

packages = [
    { include = "clickx3" },
    { include = "clickx3/**/*.py" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
uiautomator2 = { version = "^2.15.0", extras=["image"] }
facebook-wda = "^1.4.0"
tidevice = { version = "^0.4.3", extras=["openssl"] }
jsonpath = "^0.82"
orjson = "^3.5.1"
pycryptodome = "^3.10.1"
pywavelets = "^1.1.1"
pyyaml = "^5.4.1"
sqlalchemy = "^1.4.2"
cx-oracle = "^8.1.0"
sshtunnel = "^0.4.0"
paddlepaddle = "2.0.2"
paddleocr = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "*"
pytest-html = "*"
pytest-order = "*"
pytest-sugar = "*"
pytest-rerunfailures = "*"
flake8 = "*"
yapf = "*"

[tool.poetry.scripts]

[build-system]
requires = [
    "setuptools>=50.0",
    "poetry>=1.1.5"
]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "google"
line_length = 120
multi_line_output = 3
group_by_package = true
